1. Added some profile photo animation 2. Fixed the Title spacing with better responsiveness

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,7 +40,9 @@ body {
     /* border: 1px solid black; */
     flex-grow: 1;
     height: 100vh;
-    margin: 0px;
+    max-width: 30vw;
+    /* margin: 50px; */
+    /* padding: 50px; */
 }
 
 .right {
@@ -60,13 +62,13 @@ body {
 }
 
 
-.profile img {
-    width: 250px;
-    /* padding-left: 30px;
-    padding-right: 30px; */
+/* .frame img {
+    width: 15.625rem;
+    padding-left: 30px;
+    padding-right: 30px;
     padding: 35px;
     padding-top: 37px;
-}
+} */
 
 .buttons {
     /* border: 2px solid rebeccapurple; */
@@ -89,8 +91,8 @@ a {
     font-size: 69px;
     color: aliceblue;
     /* padding: 250px 100px; */
-    padding-top: 3.8em;
-    padding-left: 1.7em;
+    /* padding-top: 3.8em;
+    padding-left: 1.7em; */
     overflow: hidden;
 }
 
@@ -105,6 +107,19 @@ a {
 
 #title p span {
     background-color: aliceblue;
+}
+
+#title > img:nth-child(1) {
+    position: relative;
+    margin-top: -16.5rem;
+    margin-left: -8rem;
+}
+
+.center_text{
+    position: absolute;
+  top: 20rem;
+  left: 56rem;
+  transform: translate(-50%, -50%);
 }
 
 .right #about_me {
@@ -383,3 +398,11 @@ highlight:hover {
         padding-top: 2.5em;
     }
 }
+
+/* .right > #title, .right > #about_me, .right > #skill, .right > #res, .right > #contact{
+    padding-left: 0px;
+}
+
+.right > #UP-icon{
+    padding-left: -100px;
+} */
